tests/gabc-dump/should-fail/bad-close-brackets.gabc
name: bad close brackets;
%%
(c4) g(g) g(g]])
